<resources>
    <string name="app_name">PixelPursuit</string>

    <string name="lvl_selector_title">Niveaux de difficultés</string>

    <string name="diff_facile">Facile</string>
    <string name="diff_moyenne">Moyenne</string>
    <string name="diff_difficile">Difficile</string>
    <string name="diff_pro">Pro</string>

    <string name="vitesse_facile">Vitesse :10</string>
    <string name="vitesse_moyenne">Vitesse :40</string>
    <string name="vitesse_difficile">Vitesse :70</string>
    <string name="vitesse_pro">Vitesse :100</string>

    <string name="taille_facile">Taille des formes :2</string>
    <string name="taille_moyenne">Taille des formes :5</string>
    <string name="taille_difficile">Taille des formes :7</string>
    <string name="taille_pro">Taille des formes :10</string>

    <string name="temps_facile">Temps :5</string>
    <string name="temps_moyenne">Temps :4</string>
    <string name="temps_difficile">Temps :2</string>
    <string name="temps_pro">Temps :1</string>

    <string name="vitesse_jeu">Vitesse : %d</string>
    <string name="temps_jeu">Temps : %d</string>
    <string name="taille_image">Taille des formes : %d</string>

    <string name="leaderboard_titre">Classement global</string>
    <string name="leaderboard_nom">Nom : %s</string>
    <string name="leaderboard_score">Score : %d</string>
    <string name="leaderboard_score_string">Score : %s</string>
    <string name="leaderboard_date">Date : %s</string>
    <string name="Tuto_title">Tutoriel</string>
    <string name="pixelpursuit">Pixel Pursuit</string>
    <string name="datewinter2024">Date du projet : Hiver 2024</string>
    <string name="course8inf257">Cours : 8INF257</string>
    <string name="clictomeetdevelopers">"Clique sur le logo de l'application\npour rencontrer les développeurs !"</string>
    <string name="romaincdescription">"Développeur de l'application\nUniversité de Technologie de Troyes\nInformatique et Systèmes d'Information"</string>
    <string name="julienbdescription">"Développeur et graphiste de l'application\nUniversité de Technologie de Troyes\nRéseaux et Télécommunications"</string>
    <string name="romainvdescription">"Développeur de l'application\nEpita de Toulouse\n"</string>
    <string name="jimmycdescription">"Développeur de l'application\nEpita de Lyon\n"</string>
    <string name="Menu">Menu principal</string>
    <string name="Title">Pixel Pursuit</string>
    <string name="Start">Jouer</string>
    <string name="Levels">Niveaux</string>
    <string name="Leaderboard">Classement</string>
    <string name="Settings">Paramètres</string>
    <string name="ImageConfig">Configuration des images</string>
    <string name="Credits">Crédits</string>
    <string name="Exit">Quitter</string>
    <string name="SettingsTitle">Paramètres</string>
    <string name="Speed">Vitesse</string>
    <string name="ImageSize">Taille des images</string>
    <string name="Time">Temps</string>
    <string name="LevelSelect">Sélection du niveau</string>
    <string name="LaunchGame">Lancer une partie</string>
    <string name="Back">Retour</string>
    <string name="DefaultValue">0</string>
    <string name="Tutoriel">Tutoriel</string>
    <string name="DifficultyName">Nom de la difficulté</string>
    <string name="DefaultDifficulty">Defaut</string>
    <string name="SaveDifficulty">Sauvegarder le niveau</string>
    <string name="record_perso">"Record personnel : "</string>
    <string name="inserer_nom_difficulte">Insérez le nom de la difficulté à supprimer</string>
    <string name="supprimer_difficulte">Supprimer la difficulté sélectionnée</string>
    <string name="DifficulyAlreadyExistTitle">"Difficulté déjà existante"</string>
    <string name="NameTitle">Nom :</string>
    <string name="DefaultName">DefaultName</string>
    <string name="supprimer_toutes_difficultes">Supprimer toutes les difficultés personnalisées</string>
    <string name="NoAppForPictures">Aucune application pour ouvrir la galerie de photos.</string>
    <string name="PleaseFillAllFields">Veuillez remplir tous les champs</string>
    <string name="NameTaken">Ce nom de pack existe déjà</string>
    <string name="PleaseSelectMainImage">Veuillez sélectionner une image principale</string>
    <string name="SelectBetween">Veuillez sélectionner entre</string>
    <string name="And">et</string>
    <string name="SavePackSuccess">Pack enregistré avec succès</string>
    <string name="PackSaveError">Erreur lors de l\'enregistrement du pack</string>
    <string name="SelectedPack">(Pack sélectionné)</string>
    <string name="PackName">Nom du pack</string>
    <string name="PackDescription">Description du pack</string>
    <string name="PackMainImage">Image principale du pack :</string>
    <string name="SelectPackImages">Sélectionne les images du pack</string>
    <string name="SavePack">Enregistrer le pack</string>
    <string name="DefaultPackName">Pack par défaut</string>
    <string name="DefaultPackDescription">Ce pack est le pack originel ! Parfait pour découvrir le jeu</string>
    <string name="SelectPack">Sélectionne le pack de ton choix :</string>
    <string name="SelectedPackHere">Pack sélectionné :</string>
    <string name="TutoGeneral">Bienvenue dans Pixel Pursuit !\nDans ce jeu de réflexe, vous devrez trouver la forme demandée dans la grille dans la limite de temps imparti.</string>
    <string name="TutoLogo">Vous trouverez en haut au centre la forme que vous devez chercher pour ce round</string>
    <string name="TutoScore">En haut à gauche se trouve votre score ainsi que le temps restant pour trouver la forme avant que le partie ne soit perdue. Celui-ci est réinitialisé à chaque round et diminue de 0.5 secondes si vous touchez une forme incorrecte !</string>
    <string name="TutoDifficulty">Enfin, vous trouverez en haut à droite les informations concernant la difficulté actuelle de la partie.\nElle augmente tous les 10 rounds avec une diminution du temps et un agrandissement de la grille.</string>
    <string name="DeleteConfirmTitle">Confirmation de suppression</string>
    <string name="DeleteConfirmDesc">Êtes-vous sûr de vouloir supprimer ce pack ?</string>
    <string name="Delete">Supprimer</string>
    <string name="Cancel">Annuler</string>
    <string name="DeleteDefaulPacksError">La suppression de packs non personnalisés n\'est pas possible.</string>
    <string name="Score">Score : %d</string>
    <string name="ScoreTitle">Score :</string>
    <string name="NoMoreTime">Temps écoulé !</string>
    <string name="BackToMenu">Retourner au menu</string>
    <string name="QuitGameTitle">Voulez-vous quitter le jeu ?</string>
    <string name="Leave">Quitter</string>
    <string name="Parameters">Paramètres : \n Temps par round : %s \nTaille de la grille : %d</string>
    <string name="NoDifficultyFound">Aucune difficulté n\'est trouvée avec ce nom</string>
    <string name="DifficultyErased">Cette difficulté n\'existe plus !</string>

    <string name="NewDifficultyWarning">Voulez-vous écraser la difficulté %s ?\n\nAncienne Difficulté :\nVitesse : %d "\nTaille des images : %d\nTemps : %d\n\nNouvelle Difficulté :\nVitesse : %d\nTaille des images : %d\nTemps : %d</string>
    <string name="Erase">Écraser</string>
    <string name="Copy">Copier</string>
    <string name="SelectMaxImages">Veuillez sélectionner au maximum %d images</string>
    <string name="SelectBetweenImages">Veuillez sélectionner entre %d et %d images pour votre pack</string>
    <string name="ScoreAndTime">Score : %d \nTemps restant : %s</string>
    <string name="SelectedPackTitle">%s (Pack sélectionné)</string>
    <string name="DateTitle">"Date :"</string>
    <string name="Pseudo">Pseudo</string>
</resources>