<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            style="@style/Theme_Toolbar"
            android:id="@+id/ActionBar"/>

        <TextView
            style="@style/Theme_Text"
            android:id="@+id/Text_Username"
            android:text="@string/Pseudo"
            />

        <EditText
            style="@style/Theme_EditText"
            android:id="@+id/EditText_Username"
            android:inputType="text"
            android:text="@string/DefaultName"
            />

        <TextView
            style="@style/Theme_Text"
            android:id="@+id/Text_Difficulty"
            android:text="@string/DifficultyName"
            />

        <EditText
            style="@style/Theme_EditText"
            android:id="@+id/EditText_Difficulty"
            android:inputType="text"
            android:text="@string/DefaultDifficulty"
            />

        <TextView
            style="@style/Theme_Text"
            android:id="@+id/Text_Speed"
            android:text="@string/Speed"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <SeekBar
                style="@style/Theme_SeekBar"
                android:id="@+id/SeekBar_Speed"
                />
            <TextView
                style="@style/Theme_Text"
                android:id="@+id/Text_SpeedValue"
                android:text="@string/DefaultValue"
                />
        </LinearLayout>

        <TextView
            style="@style/Theme_Text"
            android:id="@+id/Text_ImageSize"
            android:text="@string/ImageSize"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <SeekBar
                style="@style/Theme_SeekBar"
                android:id="@+id/SeekBar_ImageSize"
                />
            <TextView
                style="@style/Theme_Text"
                android:id="@+id/Text_ImageSizeValue"
                android:text="@string/DefaultValue"
                />
        </LinearLayout>

        <TextView
            style="@style/Theme_Text"
            android:id="@+id/Text_Time"
            android:text="@string/Time"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <SeekBar
                style="@style/Theme_SeekBar"
                android:id="@+id/SeekBar_Time"
                />
            <TextView
                style="@style/Theme_Text"
                android:id="@+id/Text_TimeValue"
                android:text="@string/DefaultValue"
                />
        </LinearLayout>

        <Button
            style="@style/Theme_Button"
            android:text="@string/SaveDifficulty"
            android:onClick="SaveDifficulty"
            />

        <Button
            style="@style/Theme_Button"
            android:text="@string/LevelSelect"
            android:onClick="LevelSelection"
            />

        <Button
            style="@style/Theme_Button"
            android:text="@string/LaunchGame"
            android:onClick="LaunchGamewithSettings"
            />

        <Button
            style="@style/Theme_Button"
            android:text="@string/Back"
            android:onClick="Quit"
            />
    </LinearLayout>
</ScrollView>