<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="10dp">

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/player_medal"
        android:layout_margin="10dp"
        android:layout_centerVertical="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NameTitle"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@id/player_medal"
        android:id="@+id/player_name"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ScoreTitle"
        android:layout_toEndOf="@id/player_medal"
        android:layout_below="@id/player_name"
        android:id="@+id/player_score"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DateTitle"
        android:layout_marginBottom="10dp"
        android:layout_toEndOf="@id/player_medal"
        android:layout_below="@id/player_score"
        android:id="@+id/player_date"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginVertical="5dp"
        android:background="@color/black"
        android:layout_below="@id/player_medal"/>

</RelativeLayout>