<!-- activity_create_custom_pack.xml -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateCustomPackActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".CreateCustomPackActivity">

    <EditText
        android:id="@+id/editTextPackName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/PackName"
        android:inputType="text"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/editTextPackDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/PackDescription"
        android:inputType="text"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PackMainImage"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_gravity="start"
        android:layout_marginBottom="8dp"/>

    <ImageView
        android:id="@+id/mainImageView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:src="@android:drawable/ic_menu_camera"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SelectPackImages"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"/>

    <ImageView
        android:id="@+id/selectAllImage"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:src="@drawable/ic_menu_selectall_holo_light"/>
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:columnCount="2"
        android:rowCount="4">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_columnWeight="1"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:src="@android:drawable/ic_menu_camera"/>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_columnWeight="1"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:src="@android:drawable/ic_menu_camera"/>

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_columnWeight="1"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:src="@android:drawable/ic_menu_camera"/>

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_columnWeight="1"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:src="@android:drawable/ic_menu_camera"/>

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_columnWeight="1"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:src="@android:drawable/ic_menu_camera"/>

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_columnWeight="1"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:src="@android:drawable/ic_menu_camera"/>

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_columnWeight="1"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:src="@android:drawable/ic_menu_camera"/>

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_columnWeight="1"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:src="@android:drawable/ic_menu_camera"/>

    </GridLayout>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/SavePack"
        android:layout_marginTop="16dp"/>

</LinearLayout>
</ScrollView>